# blitzed-irc-trivia

./: .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  configure  configure.ac  configure.in  mkinstalldirs  question.db  question.db.sample  trivia.conf.hourly  trivia.conf.sample
CVS/: Entries  Repository  Root
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  activity.cpp  activity.h  blitzed_config.cpp  blitzed_config.h  client.cpp  client.h  config.cpp  config.h  config.in  datatypes.h  game.cpp  game.h  h.h  log.cpp  log.h  main.cpp  options.h  parse.cpp  parse.h  player.cpp  player.h  question.cpp  question.h
src/CVS/: Entries  Repository
