bin_PROGRAMS = trivia
AM_CPPFLAGS= -Wall
trivia_SOURCES = main.h main.cpp	\
client.h client.cpp log.h log.cpp	\
parse.h parse.cpp player.h player.cpp	\
game.h game.cpp blitzed_config.h	\
blitzed_config.cpp			\
options.h datatypes.h question.cpp	\
question.h activity.cpp activity.h
AUTOMAKE_OPTIONS = foreign

